--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -35,6 +35,12 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :club_cash_enable, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :club_cash_enable, :class => 'check_box' %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :family_memberships_allowed, :class => 'control-label' %>
     <div class="controls">
       <%= f.check_box :family_memberships_allowed, :class => 'check_box' %>
