--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -23,6 +23,10 @@
   <%= @club.requires_external_id %>
 </p>
 <p>
+  <strong><%= model_class.human_attribute_name(:club_cash_enable) %>:</strong><br>
+  <%= @club.club_cash_enable %>
+</p>
+<p>
   <strong><%= model_class.human_attribute_name(:family_memberships_allowed) %>:</strong><br>
   <%= @club.family_memberships_allowed %>
 </p>
