--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for @member, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for @member, :html => { :class => 'form-horizontal', :id => 'new_member' } do |f| %>
   <%= render :partial => 'form', :locals => { :f => f } %>
 <% end %>
 
