--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -315,8 +315,10 @@
   <li><a href="#notes" data-toggle="tab">Notes</a></li>
   <li><a href="#credit_cards" data-toggle="tab">Credit Cards</a></li>
   <li><a href="#transactions" data-toggle="tab">Transactions</a></li>
-  <% if @current_club.allow_club_cash_transaction? %>
-    <li><a href="#club_cash_transactions" data-toggle="tab">Club Cash</a></li>
+  <% if @current_club.club_cash_transactions_enabled %>
+    <% if @current_club.allow_club_cash_transaction? %>
+      <li><a href="#club_cash_transactions" data-toggle="tab">Club Cash</a></li>
+    <% end %>  
   <% end %>
   <li><a href="#fulfillments" data-toggle="tab">Fulfillments</a></li>
   <li><a href="#communication" data-toggle="tab">Communications</a></li>
@@ -347,12 +349,14 @@
       <%= render :partial => 'transactions' %>
     </div>
   </div>
-  <% if @current_club.allow_club_cash_transaction? %>
-    <div class="tab-pane" id="club_cash_transactions">
-      <div class="tab_body_padding">
-        <%= render :partial => 'club_cash_transactions' %>
+  <% if @current_club.club_cash_transactions_enabled %>
+    <% if @current_club.allow_club_cash_transaction? %>
+      <div class="tab-pane" id="club_cash_transactions">
+        <div class="tab_body_padding">
+          <%= render :partial => 'club_cash_transactions' %>
+        </div>
       </div>
-    </div>
+    <% end %>
   <% end %>
   <div class="tab-pane" id="fulfillments">
     <div class="tab_body_padding">
