--- a/app/views/members/cancel.html.erb
+++ b/app/views/members/cancel.html.erb
@@ -3,6 +3,13 @@
 <%= form_tag(member_cancel_path, :id => 'member_cancelation_form') do %>
   <table class="table table-bordered">
     <thead>
+      <% if @current_member.cancel_date %>
+        <tr>
+          <th>
+              <%= label :current_cancel_date, "Current cancel date: #{I18n.l(@current_member.cancel_date, :format => :only_date)}" %>
+          </th>
+        </tr>
+      <% end %>
       <tr>
         <th>
           <%= label :cancel_date, t('activerecord.attributes.member.cancel_date'), :class => 'help-inline' %> 
