--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -95,6 +95,19 @@
         <%= render :partial => 'shared/login_remotely_button', :locals => { use_large_button: true } %>
       </div>
     </div>
+    <div class="row-fluid" style="margin-top: 8px;">
+      <div class="span4">
+        <%= link_to I18n.t('buttons.bill_extra_amount'), member_bill_event_path, :class => "btn btn-large-w btn-info" %>
+      </div>
+    </div>
+    <div class="row-fluid" style="margin-top: 8px;">
+      <div class="span4">
+      </div>
+    </div>
+    <div class="row-fluid" style="margin-top: 8px;">
+      <div class="span4">
+      </div>
+    </div>
 </div>
 
 
