--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -97,7 +97,11 @@
     </div>
     <div class="row-fluid" style="margin-top: 8px;">
       <div class="span4">
-        <%= link_to I18n.t('buttons.bill_extra_amount'), member_bill_event_path, :class => "btn btn-large-w btn-info" %>
+        <% if @current_member.can_bill_membership? and can? :bill_event, Member %>
+          <%= link_to I18n.t('buttons.bill_extra_amount'), member_bill_event_path, :class => "btn btn-large-w btn-info" %>
+        <% else %>
+          <%= link_to I18n.t('buttons.bill_extra_amount'), "#", :class => "btn btn-large-w btn-info", :disabled => 'disabled' %>
+        <% end %>
       </div>
     </div>
     <div class="row-fluid" style="margin-top: 8px;">
