--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -97,7 +97,7 @@
     </div>
     <div class="row-fluid" style="margin-top: 8px;">
       <div class="span4">
-        <% if @current_member.can_bill_membership? and can? :bill_event, Member %>
+        <% if @current_member.can_bill_membership? and can? :no_recurrent_billing, Member %>
           <%= link_to I18n.t('buttons.no_recurrent_billing'), member_no_recurrent_billing_path, :class => "btn btn-large-w btn-info" %>
         <% else %>
           <%= link_to I18n.t('buttons.no_recurrent_billing'), "#", :class => "btn btn-large-w btn-info", :disabled => 'disabled' %>
