--- a/app/assets/stylesheets/readable/override.css
+++ b/app/assets/stylesheets/readable/override.css
@@ -105,12 +105,12 @@ div.dataTables_filter input {
   color: #FDFDFA;
 }
 
-.datepicker_for_search {
-  width: 120px;
+.datepicker_for_search_nbd {
+  width: 100px;
 }
 
 .datepicker_for_search_billed_date{
-  width: 120px;
+  width: 100px;
 }
 
 .btn-large-w {
