--- a/app/assets/stylesheets/united/override.css
+++ b/app/assets/stylesheets/united/override.css
@@ -104,12 +104,12 @@ div.dataTables_filter input {
   color: #FFFFFF;
 }
 
-.datepicker_for_search {
-  width: 120px;
+.datepicker_for_search_nbd {
+  width: 80px;
 }
 
 .datepicker_for_search_billed_date{
-  width: 120px;
+  width: 80px;
 }
 
 .btn-large-w {
