--- a/app/views/admin/partners/_form.html.erb
+++ b/app/views/admin/partners/_form.html.erb
@@ -12,14 +12,14 @@
 
 <%= form_for [ :admin, @partner ], :html => { :class => 'form-horizontal' } do |f| %>
   <% if @partner.new_record? %>
-    <div class="control-group">
+    <div class="control-group" id="div_prefix">
       <%= f.label :prefix, :class => 'control-label required_asterick' %>
       <div class="controls">
         <%= f.text_field :prefix, :class => 'text_field' %>
       </div>
     </div>
   <% end %>
-  <div class="control-group">
+  <div class="control-group" id="div_name">
     <%= f.label :name, :class => 'control-label required_asterick' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'text_field ' %>
@@ -50,7 +50,7 @@
   </div>
   <div class="control-group">
     <%= fields_for :domain do |domain_fields| %>
-      <div class="control-group">
+      <div class="control-group" id="div_domain_url">
         <%= domain_fields.label :url, :class => 'control-label required_asterick' %>
         <div class="controls">
           <%= domain_fields.text_field :url, :class => 'text_field', :name => "partner[domains_attributes][0][url]", :value => (params[:partner][:domains_attributes]["0"][:url] if params[:partner]) %>
