--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -2,9 +2,8 @@
 <table class="table table-bordered table-condensed">
   <thead>
     <tr>
-      <th> 
-        <%= t('activerecord.attributes.credit_card.last_digits') %> 
-      </th>
+      <th> <%= t('activerecord.attributes.credit_card.last_digits') %> </th>
+      <th> <%= t('activerecord.attributes.credit_card.token') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.expire_date') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.added_at') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.last_successful_bill_date') %> </th>
@@ -22,11 +21,10 @@
           class="<%= cycle("odd","even") %>" 
         <% end %>
         >
-      <td> 
-        <%= cc.last_digits %>
-      </td>
+      <td> <%= cc.last_digits %> </td>
+      <td> <%= cc.token %> </td>
       <td> <%= cc.expire_month %> / <%= cc.expire_year %> </td>
-      <td> <%= I18n.l cc.created_at, :format => :only_date %></td>
+      <td> <%= I18n.l cc.created_at, :format => :only_date %> </td>
       <td> <%= I18n.l cc.last_successful_bill_date, :format => :dashed if !cc.last_successful_bill_date.nil? %> </td>
       <td>
         <% if cc.blacklisted %>
