--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,5 +1,4 @@
 <%= form_tag(members_search_result_path, :method => 'get', :id => 'index_search_form' ,:html => { :class => 'well form-inline' }) do |f| %>
-
   <section>
     <div class="page-header">
       <h1>Search</h1>
@@ -54,6 +53,18 @@
                       <%= text_field :member, :phone_local_number, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_local_number'),
                                      :value => (params[:member][:phone_local_number] if params[:member]) %> 
                     </td>
+                  </tr>
+                  <tr>
+                    <td> <%= t('activerecord.attributes.member.needs_approval') %></td>
+                    <td> <%= check_box :member, :needs_approval, :checked => (params[:member][:needs_approval] if params[:member]) %> </td>
+                  </tr>
+                  <% if @current_club.requires_external_id %>
+                    <tr>
+                      <td> <%= t('activerecord.attributes.member.external_id') %></td>
+                      <td> <%= text_field :member, :external_id, :class => 'text-field',
+                                       :value => (params[:member][:external_id] if params[:member]) %> </td>
+                    </tr>
+                  <% end %>
                   </tr>
                   <% if @current_club.sync? %>
                     <tr>
@@ -142,21 +153,14 @@
                                      :value => (params[:member][:last_digits] if params[:member]) %> </td>
                   </tr>
                   <tr>
+                    <td>CC <%= t('activerecord.attributes.credit_card.token') %></td>
+                    <td> <%= text_field :member, :cc_token, :class => 'text_field',
+                                     :value => (params[:member][:cc_token] if params[:member]) %> </td>
+                  </tr>
+                  <tr>
                     <td><%= t('activerecord.attributes.member.member_notes') %></td>
                     <td> <%= text_field :member, :notes, :class => 'text_field',
                                      :value => (params[:member][:notes] if params[:member]) %> </td>
-                  </tr>
-                  <tr>
-                    <td> <%= t('activerecord.attributes.member.needs_approval') %></td>
-                    <td> <%= check_box :member, :needs_approval, :checked => (params[:member][:needs_approval] if params[:member]) %> </td>
-                  </tr>
-                  <% if @current_club.requires_external_id %>
-                    <tr>
-                      <td> <%= t('activerecord.attributes.member.external_id') %></td>
-                      <td> <%= text_field :member, :external_id, :class => 'text-field',
-                                       :value => (params[:member][:external_id] if params[:member]) %> </td>
-                    </tr>
-                  <% end %>
                   </tr>
                   <tr>
                     <td> <%= t('activerecord.attributes.member.billed_date') %> </td>
@@ -188,7 +192,7 @@
           <i class="icon-refresh"></i> <%= t('clear') %>
         <% end %>
 
-        <button class="btn" style="width: 190px;">
+        <button class="btn" style="width: 190px;" id="submit_button">
           <i class="icon-search"></i> <%= t('search') %>
         </button>
       </p>
@@ -199,7 +203,6 @@
   <div class="tab-pane" id="members">
     <%= render :partial => 'search' %>
   </div>  
-
 <% end %>
 
 <script type="text/javascript">
