--- a/app/views/members/save_the_sale.html.erb
+++ b/app/views/members/save_the_sale.html.erb
@@ -14,10 +14,15 @@
       </td>
     </tr>
     <tr>
-      <td> <%= submit_tag t('buttons.save_te_sale'), :class => 'btn btn-primary', :confirm => t('are_you_sure') %>
+      <td> <%= submit_tag t('buttons.save_te_sale'), :class => 'btn btn-primary', :confirm => t('are_you_sure'), :id => "save_the_sale_button" %>
         <%= link_to t('buttons.full_save'), member_full_save_path , :class=> 'btn btn-success' %> 
         <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
+
+
+<script>
+  $(document).ready( save_the_sale_functions() );
+</script>
 
