improvements on approval email process.

--- a/app/views/notifier/recover_with_approval.html.erb
+++ b/app/views/notifier/recover_with_approval.html.erb
@@ -1,6 +1,4 @@
-<p> Dear <%= @agent.first_name %> <%= @agent.last_name %>, </p>
-
-<p>The Member <%= @member.full_name %>, has submited to be recovered. This member needs to be approved.</p>
+<p>Member <%= @member.full_name %> needs to be approved.</p>
     
 <p> The following member has enrolled:
         <p> <b> First name: </b>  <%= @member.first_name %> </p>
