--- a/app/views/notifier/active_with_approval.html.erb
+++ b/app/views/notifier/active_with_approval.html.erb
@@ -1,13 +1,11 @@
-<p> Dear <%= @agent.first_name %> <%= @agent.last_name %>, </p>
-
-<p>The Member <%= @member.full_name %>, has submited to be enrolled. This member needs to be approved.</p>
+<p>Member <%= @member.full_name %> needs to be approved.</p>
     
 <p> The following member has enrolled:
-    	<p> <b> First name: </b>  <%= @member.first_name %> </p>
-    	<p> <b> Last name: </b> <%= @member.last_name %> </p>
-    	<p> <b> Address: </b> <%= @member.full_address %> </p>
-        <p> <b> Club: </b> <%= @member.club_id %> - <%= @member.club.name %> </p> 
-        <p> <b> Terms of membership: </b> <%= @member.terms_of_membership_id %> - <%= @member.terms_of_membership.name %> </p>
+<p> <b> First name: </b>  <%= @member.first_name %> </p>
+<p> <b> Last name: </b> <%= @member.last_name %> </p>
+<p> <b> Address: </b> <%= @member.full_address %> </p>
+<p> <b> Club: </b> <%= @member.club_id %> - <%= @member.club.name %> </p> 
+<p> <b> Terms of membership: </b> <%= @member.terms_of_membership_id %> - <%= @member.terms_of_membership.name %> </p>
 
 <p> In order to accept or reject this member, please follow this link <%= link_to 'Link to member show page', show_member_url(@member.club.partner.prefix, @member.club.name , @member.id) %> .</p>.
 
