--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -95,6 +95,7 @@
         <%= render :partial => 'shared/login_remotely_button', :locals => { use_large_button: true } %>
       </div>
     </div>
+
     <div class="row-fluid" style="margin-top: 8px;">
       <div class="span4">
         <% if @current_member.can_bill_membership? and can? :no_recurrent_billing, Member %>
@@ -103,15 +104,17 @@
           <%= link_to I18n.t('buttons.no_recurrent_billing'), "#", :class => "btn btn-large-w btn-info", :disabled => 'disabled', :id => "no_recurrent_bill_btn" %>
         <% end %>
       </div>
-    </div>
-    <div class="row-fluid" style="margin-top: 8px;">
+      <div class="span4">
+        <% if @current_member.can_bill_membership? and can? :manual_billing, Member %>
+          <%= link_to I18n.t('buttons.manual_billing'), member_manual_billing_path, :class => "btn btn-large-w btn-info", :id => "manual_billing_btn" %>
+        <% else %>
+          <%= link_to I18n.t('buttons.manual_billing'), "#", :class => "btn btn-large-w btn-info", :disabled => 'disabled', :id => "manual_billing_btn" %>
+        <% end %>       
+      </div>
       <div class="span4">
       </div>
     </div>
-    <div class="row-fluid" style="margin-top: 8px;">
-      <div class="span4">
-      </div>
-    </div>
+  </div>
 </div>
 
 
