--- a/app/views/members/manual_billing.html.erb
+++ b/app/views/members/manual_billing.html.erb
@@ -4,13 +4,12 @@
 	<table class="table table-bordered">
 		<tr>
 			<td>
-				<%= label :amount, I18n.t('activerecord.attributes.transaction.amount'), :class => 'help-inline' %>
-				<%= label :amount, I18n.t('activerecord.attributes.transaction.amount_help', :minimun_amount => number_to_currency(@tom.installment_amount)), :class => 'help-inline'%>	
+				<%= label :amount, I18n.t('activerecord.attributes.transaction.amount')+I18n.t('activerecord.attributes.transaction.amount_help', :minimun_amount => number_to_currency(@tom.installment_amount)), :class => 'help-inline' %>
 				<%= text_field_tag :amount %>
 			</td>
 			<td>
 				<%= label :payment_type, I18n.t('activerecord.attributes.transaction.payment_type'), :class => 'help-inline' %>
-				<%= select_tag :payment_type, options_for_select([['Cash', 'cash'], ['Check', 'check']]) %>
+				<%= select_tag :payment_type, options_for_select([['Cash', 'cash'], ['Check', 'check']]),:include_blank => '' %>
 			</td>
 		</tr>
 		<tr>
