--- a/app/views/shared/_reset_password_button.html.erb
+++ b/app/views/shared/_reset_password_button.html.erb
@@ -1,21 +1,23 @@
-<% large_button = ( use_large_button ? "btn-large-w" : "") %>
-<% if @current_member.lapsed? || !@current_member.api_member || @current_member.api_id.blank? %>
-  <%= 
-    link_to "#", 
-      id: "password_reset",
-      disabled: true,
-      class: "btn btn-warning #{large_button} disabled" do %>
-    <i class='icon-key'></i>
-    <%= t('buttons.password_reset') %>
-  <% end %>
-<% else %>
-  <%= 
-    link_to member_reset_password_path(@current_partner.prefix, @current_club.name, @current_member.id), 
-      method: :post, 
-      class: "btn btn-warning #{large_button}", 
-      id: "password_reset",
-      confirm: 'Are you sure?' do %>
-    <i class='icon-key'></i>
-    <%= t('buttons.password_reset') %>
+<% unless @current_member.lapsed? %>
+  <% large_button = ( use_large_button ? "btn-large-w" : "") %>
+  <% if !@current_member.api_member || @current_member.api_id.blank? %>
+    <%= 
+      link_to "#", 
+        id: "password_reset",
+        disabled: true,
+        class: "btn btn-warning #{large_button} disabled" do %>
+      <i class='icon-key'></i>
+      <%= t('buttons.password_reset') %>
+    <% end %>
+  <% else %>
+    <%= 
+      link_to member_reset_password_path(@current_partner.prefix, @current_club.name, @current_member.id), 
+        method: :post, 
+        class: "btn btn-warning #{large_button}", 
+        id: "password_reset",
+        confirm: 'Are you sure?' do %>
+      <i class='icon-key'></i>
+      <%= t('buttons.password_reset') %>
+    <% end %>
   <% end %>
 <% end %>
