--- a/app/views/shared/_resend_welcome_email_button.html.erb
+++ b/app/views/shared/_resend_welcome_email_button.html.erb
@@ -1,4 +1,4 @@
-<% if @current_member.can_relate_to_api? %>
+<% if @current_member.has_link_to_api? %>
   <% large_button = ( use_large_button ? "btn-large-w" : "") %>
   <% if @current_member.api_id.blank? %>
     <%= 
