ref#27159-added index on fulfillment report. Also added translation related to this.

--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -12,6 +12,7 @@
 		</tr>
 		</thead>
 		<thead>
+			<th> <%= t('index') %> </th>
 			<th> <%= t('activerecord.attributes.member.id') %> </th>
 			<th> <%= t('activerecord.attributes.fulfillment.member') %> </th>
 			<th> <%= t('activerecord.attributes.fulfillment.assigned_at') %> </th>
@@ -32,8 +33,9 @@
 					<td colspan="8"><div class="alert">No results were found for this filter.</div></td>
 				</tr>
 			<% end %>
-			<% @fulfillments.each do |fulfillment| %>
+			<% @fulfillments.each_with_index do |fulfillment, index| %>
 				<tr>
+					<td> <%= index+1 %></td>
 					<td> <a href="<%= show_member_path(:member_prefix => fulfillment.member.id) %>" > <%= fulfillment.member.id %></a></td>
 					<td> <%= fulfillment.member.full_name %> </td>
 					<td> <%= I18n.l fulfillment.assigned_at, :format => :only_date %> </td>
