--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require jquery.ui.core
  *= require jquery.ui.theme
  *= require jquery.ui.datepicker
+ *= require table_sorter_style
  *= require dataTables/jquery.dataTables.bootstrap
  *= require dataTables/src/demo_table_jui
  */
