--- a/app/views/admin/agents/show.html.erb
+++ b/app/views/admin/agents/show.html.erb
@@ -62,7 +62,7 @@
   </p>
 <% end %>
 
-<h2>Global Roles</h2>
+<h2 id="global_roles">Global Roles</h2>
 <ul>
   <% @agent.roles.each do |role| %>
     <li><%= role %></li>
