--- a/app/views/members/recover.html.erb
+++ b/app/views/members/recover.html.erb
@@ -16,9 +16,13 @@
 		</tr>
 		<tr>
       <td> 
-      	<%= submit_tag t('buttons.recover'), :class => 'btn btn-primary', :confirm => t('are_you_sure') %>
+      	<%= submit_tag t('buttons.recover'), :class => 'btn btn-primary', :id => 'recover_button', :confirm => t('are_you_sure') %>
         <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> 
       </td>
 		</tr>
 	</table>
 <% end %>
+
+<script>
+  $(document).ready(recover_member_functions());
+</script>
