[#51154341] - prospect sync done. if prospect email does not exist on ET it will be created. If prospect email exists as prospect, we will update his imformation.

--- a/app/views/members/_mkt_tool_sync_information.html.erb
+++ b/app/views/members/_mkt_tool_sync_information.html.erb
@@ -1,4 +1,4 @@
-<% if defined? SacExactTarget::Member and @current_member.exact_target_sync? %>
+<% if defined? SacExactTarget::MemberModel and @current_member.exact_target_sync? %>
   <table id="table_pardot_sync" class="table table-bordered table-condensed">
     <thead>
       <tr class="box_title">
