--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -177,7 +177,10 @@
   <thead>
     <tr class="box_title">
       <th><h4>Active Credit Card</h4></th>
-      <td style="border: none; text-align: right;" colspan="5">
+      <% if can? :see_cc_token, CreditCard and not @current_club.use_pgc_authorize_net? %>
+        <td style="border: none"></td>
+      <% end %>
+      <td style="border: none; text-align: right;" colspan="4">
         <%= link_to(new_credit_card_path, :class => "btn btn-success", :disabled => (cannot? :create, CreditCard), :id => "add_credit_card") do %> 
           <i class="icon-plus"></i> Add a credit card
         <% end %>
