--- a/app/views/members/_mkt_tool_sync_information.html.erb
+++ b/app/views/members/_mkt_tool_sync_information.html.erb
@@ -2,8 +2,8 @@
   <table id="table_pardot_sync" class="table table-bordered table-condensed">
     <thead>
       <tr class="box_title">
-        <th><h4>Exact Target sync</h4></th>
-        <td style="border: none; text-align: right;" colspan="3">
+        <th colspan="2"><h4>Exact Target sync</h4></th>
+        <td style="border: none; text-align: right;" colspan="2">
           <%= 
             link_to member_exact_target_sync_path, 
               method: :post, 
