[#52084197]-added route, controller and view to new delayjobs index page.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -63,6 +63,7 @@
             <li><%= link_to t('menu.agents'), admin_agents_path if can? :read, Agent %></li>
             <li><%= link_to t('menu.partners'), admin_partners_path if can? :read, Agent %></li>
             <li><%= link_to "My Clubs", root_path %></li>
+            <li><%= link_to "DelayJobs", admin_delay_jobs_path %></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
             <li>
               <% selected = @current_club ? [ members_path(@current_partner.prefix, @current_club.name) ] : nil %>
