--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -110,7 +110,7 @@
         <% else %>
           <%= link_to I18n.t('buttons.manual_billing'), "#", :class => "btn btn-large-w btn-info", :disabled => 'disabled', :id => "manual_billing_btn" %>
         <% end %>
-        <%= render :partial => "shared/help", :locals => { :title => t('buttons.manual_billing'), :content => t('activerecord.attributes.member.manual_payment_help')} %>
+        <%= render :partial => "shared/help", :locals => { :title => t('buttons.manual_billing'), :content => t('buttons.manual_billing_help')} %>
       </div>
       <div class="span4">
       </div>
