--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -275,7 +275,7 @@
           <tr class="ligthgrey">
             <th><%= t('activerecord.attributes.member.next_retry_bill_date') %>:</th>
             <td id="td_mi_next_retry_bill_date">
-              <%= @current_member.next_retry_bill_date.nil? ? I18n.t('activerecord.attributes.member.next_retry_bill_date_not_set') : I18n.l(@current_member.next_retry_bill_date, :format => :only_date) %>&nbsp;&nbsp;&nbsp;
+              <%= I18n.l(@current_member.next_retry_bill_date, :format => :only_date) unless @current_member.next_retry_bill_date.nil? %>&nbsp;&nbsp;&nbsp;
               <% if @current_member.can_change_next_bill_date? %>
                 <%= link_to(member_change_next_bill_date_path, :class => "btn btn-mini btn-info", :id => "link_member_change_next_bill_date", :disabled => (cannot? :change_next_bill_date, Member)) do %> 
                   <i class="icon-pencil"></i> Change
