--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -170,3 +170,13 @@ div.dataTables_filter input {
   top: 18px;
   right: 18px;
 }
+
+.dataTables_wrapper .top, .dataTables_wrapper .bottom {
+	padding: 0;
+	background-color: transparent;
+	border: none;
+}
+
+.dataTables_wrapper .dataTables_paginate {
+	float: left;
+}
